components/product/ProductCard/ProductCard.module.css
.root {
  @apply relative max-h-full;

  /* 'raises' product against background on hover */
  &:hover {
    & .productBackground:before {
      transform: scale(0.99);
    }

    & .productImage {
      transform: scale(1.15);
    }
  }

  /* cycle product background colour */
  &:nth-child(6n + 1) .productBackground {
    @apply bg-violet;
  }

  &:nth-child(6n + 3) .productBackground {
    @apply bg-pink;
  }

  &:nth-child(6n + 5) .productBackground {
    @apply bg-blue;
  }

  &:nth-child(6n + 6) .productBackground {
    @apply bg-cyan;
  }
}

.productImage {
  /* less abrupt raising of product against background */
  @apply transition-transform duration-500 block;
}

.productBackground {
  @apply absolute inset-0 z-0;
  background-color: #212529;

  /* placeholder background during load */
  &:before {
    @apply transition-transform duration-500 block w-full h-full bg-repeat-space;
    content: '';
    /* provides a sort of textured underlay to background color */
    background-image: url('/prod-background-pattern.svg');
  }
}

.productTag {
  @apply absolute top-0 left-0 z-20;

  & > * {
    font-size: 2rem;
    letter-spacing: 0.4px;
  }
}

.productTitle {
  @apply font-bold;
  line-height: 2.2em;

  & span {
    @apply py-4 px-6 bg-primary;
    box-decoration-break: clone;
  }
}

.productPrice {
  @apply bg-primary pb-4 pt-2 px-6 font-semibold text-sm;
  letter-spacing: 0.4px;
}

